test/error/s_dupslot.lua
hstructure S
	o : object;
	o : object; -- duplicate slot name
end
